# pulseopt

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: task_agnews.py  task_cifar100.py  task_sst2.py
experiments/: __init__.py  task_agnews.py  task_cifar100.py  task_sst2.py
experiments/utils/: __init__.py  flops.py  metrics.py  results.py  run_plan.py
results/: README.md
scripts/: report_agnews_results.py  report_cifar_runs.py  report_sst2_results.py
scripts/plots/: cifar_plots.py  clean_cifar_trajectories.py  fixed_vs_adaptive_plots.py  sst2_plots.py
scripts/tables/: make_cifar_clean_tables.py  make_cifar_noisy_fixed_lr_ablation_tables.py  make_cifar_noisy_tables.py  make_compute_overhead_tables.py  make_instability_penalty_ablation_tables.py  make_nlp_latex_tables.py  make_trend_context_ablation_tables.py
src/pulseopt/: __init__.py  controller.py  episode.py  modes.py  optimizer.py  reward.py  scheduler.py  tracking.py  types.py
tests/: test_controller.py  test_episode.py  test_fixed_axis_optimization.py  test_modes.py  test_optimizer_wrapper.py  test_reward.py  test_runtime_metrics.py  test_scheduler.py
