[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseopt"
dynamic = ["version"]
description = "PulseOpt: episodic adaptive control for optimizer dynamics (LR multiplier and gradient noise)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "David Kneringer Foss", email = "david.k.foss@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "deep learning",
    "optimizer",
    "learning rate",
    "bandit",
    "adaptive",
    "scheduler",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
examples = [
    "torchvision>=0.22",
    "transformers>=4.52",
    "datasets>=3.6",
]
dev = [
    "pytest>=9,<10",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/davidkfoss/pulseopt"
Repository = "https://github.com/davidkfoss/pulseopt"
Issues = "https://github.com/davidkfoss/pulseopt/issues"
Changelog = "https://github.com/davidkfoss/pulseopt/releases"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "pulseopt.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pulseopt = ["py.typed"]

[tool.pytest]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
